#443 - home - doctype title align fix

--- a/web/src/main/ng/src/app/pages/home/home.scss
+++ b/web/src/main/ng/src/app/pages/home/home.scss
@@ -244,10 +244,17 @@
 
       .mat-mdc-card-title {
         a {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
           color: var(--app-color-darknes);
 
           &:hover {
             color: rgba(var(--app-color-darknes-rgb), .7);
+          }
+
+          .mat-icon {
+            margin-right: 8px
           }
         }
       }
